deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ws-demo
  labels:
    name: ws-demo
